--- a/DemoCode/S01.html
+++ b/DemoCode/S01.html
@@ -1838,11 +1838,11 @@
         console.log(arr.toLowerCase(arr));  //abc
     </script> -->
     
-    <script>
+    <!-- <script>
         // 简单数据类型 null ，返回的是一个空的对象 object
         var timer = null;   
         console.log(typeof timer);      //object
-        
-    </script>
+        // 如果
+    </script> -->
 </body>
 </html>
