--- a/DemoCode/L01.html
+++ b/DemoCode/L01.html
@@ -1614,7 +1614,7 @@
         console.log('出现最多的字符就是'+ch);
     </script> -->
 
-    <script>
+    <!-- <script>
         var str = 'string';
         console.log(str.concat('red'));
         
@@ -1625,6 +1625,34 @@
         console.log(str2.slice(0,3)); 
 
         
+    </script> -->
+
+    <!-- <script>
+        var str = 'andyandy';
+        console.log(str.replace('a','Q'));
+
+        var str1 = 'abcoefoxyozzopp';
+        while(str1.indexOf('o') !== -1){
+            str1 = str1.replace('o','Q');
+        }
+        console.log(str1);
+    </script> -->
+
+    <!-- <script>
+        var str = 'a,b,c,d';
+        console.log(str.split(','));
+        var str1 = 'red&pink&blue';
+        console.log(str1.split('&'));
+        var str2 = 'a,b,c,d';
+        console.log(str2.split());
+    </script> -->
+
+    <script>
+        var a = 'Abc';
+        console.log(a.toUpperCase());
+
+        var b = 'ABc';
+        console.log(b.toLowerCase());
     </script>
 </body>
 </html>
