--- a/DemoCode/S/2N2/2201.html
+++ b/DemoCode/S/2N2/2201.html
@@ -244,5 +244,29 @@
             input1.disabled = true; 
         }
     </script> -->
+
+    <!-- <div>哈哈哈</div>
+    <script>
+        var a = document.querySelector('div');
+        a.onclick = function(){
+            a.style.color = 'red';
+            a.style.backgroundColor = 'red';
+        }
+    </script> -->
+    
+    <!-- <div class="box">
+        <img src="../images/A.png" alt="">
+        <i class="b">x</i>
+    </div>
+
+    <script>
+        var b1 = document.querySelector('i');
+        var box1 = document.querySelector('div');
+        b1.onclick = function(){
+            box1.style.display = 'none';
+        }
+    </script> -->
+
+    
 </body>
 </html>
