--- a/DemoCode/S/S0/S1825三种创建元素的区别 .html
+++ b/DemoCode/S/S0/S1825三种创建元素的区别 .html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button>点击</button>
+    <!-- <button>点击</button>
     <p>abc</p>
 
     <script>
@@ -17,6 +17,74 @@
         btn1.onclick = function(){
             document.write('<div>123</div>');
         }
-    </script>
+    </script> -->
+
+    <!-- <div class="inner"></div>
+    <script>
+        // 使用innerHTML创建多个元素
+        var inner1 = document.querySelector('.inner');
+        for(var i = 0;i<=100;i++){
+            inner1.innerHTML += '<a href="#">百度</a>';
+        }
+
+        // 使用innerHTML创建多个元素，检测加载时间需要多久
+        function fn(){
+            var d1 = +new Date();
+            var str = '';
+            for(var i = 0 ;i < 1000;i++){
+                document.body.innerHTML += '<div style="width:100px;height: 10px;border: 1px solid black;"></div>';
+            }
+            var d2 = +new Date();
+            console.log(d2-d1);
+        }
+        fn();
+    </script> -->
+
+    <!-- <div class="create"></div>
+    <script> 
+        // 使用createElement()创建元素
+        var create1 = document.querySelector('.create');
+        var a = document.createElement('a');
+        create1.appendChild(a);
+
+        // 使用createElement()创建多个元素，检测加载时间需要多久，加载时间10~13毫秒
+        function fn(){
+            var d1 = +new Date();
+            for(var i = 0;i<1000;i++){
+                var div1 = document.createElement('div');
+                div1.style.width = '100px';
+                div1.style.height = '100px';
+                div1.style.border = '1px solid red';
+                document.body.appendChild(div1);
+            }
+            var d2 = +new Date();
+            console.log(d2-d1);
+        }
+        fn();
+    </script> -->
+
+    <!-- 解决使用innerHTML创建多个元素时，加载时间过长的办法,使用数组追加的方式 -->
+    <!-- <div class="inner"></div>
+    <script>
+        var inner1 = document.querySelector('.inner');
+        var arr = [];
+        for(var i = 0;i<100;i++){
+            arr.push('<a href="#">百度</a>');
+        }
+        inner1.innerHTML = arr.join('');
+
+        // 使用innerHTML创建多个元素，用数组追加的方式，检测加载时间需要多久
+        function fn(){
+            var d1 = +new Date();
+            var array = [];
+            for(var i = 0;i<1000;i++){
+                array.push('<div style="width:100px;height:10px;border:1px solid blue;"></div>');
+            }
+            document.body.innerHTML = array.join('');
+            var d2 = +new Date();
+            console.log(d2-d1);
+        }
+        fn();
+    </script> -->
 </body>
 </html>
