--- a/DemoCode/S/S0/S1901注册事件的两种方式.html
+++ b/DemoCode/S/S0/S1901注册事件的两种方式.html
@@ -10,6 +10,35 @@
     </style>
 </head>
 <body>
-    
+    <button>传统注册时间</button>
+    <button>方法监听注册事件</button>
+    <button>attachEvent方法监听事件</button>
+
+    <script>
+        var btns = document.querySelectorAll('button');
+        btns[2].attachEvent('onclick',function(){
+            console.log('你得找个ie9以下的浏览器。这个代码才能用');
+        })
+    </script>
+
+    <!-- <script>
+        var btns = document.querySelectorAll('button');
+        btns[1].addEventListener('click',function(){
+            alert('哈啊哈');
+        })
+        btns[1].addEventListener('click',function(){
+            alert('555');
+        })
+    </script> -->
+
+    <!-- <script>
+        var btns = document.querySelectorAll('button');
+        btns[0].onclick = function(){
+            alert('hahahs0');
+        }
+        btns[0].onclick = function(){
+            alert('wuwuw');
+        }
+    </script> -->
 </body>
 </html>
