2号最后提一次

--- a/DemoCode/S/2N1/1809节点操作.html
+++ b/DemoCode/S/2N1/1809节点操作.html
@@ -30,7 +30,7 @@
     </div> -->
 
     <!-- 子节点 -->
-    <!-- <ul>
+    <ul>
         <li>我是li</li>
         <li>我是li</li>
         <li>我是li</li>
@@ -48,11 +48,11 @@
         var lis = ul1.querySelectorAll('li');
         // console.log(ul1.childNodes);
 
-        console.log(ul1.children);
-    </script> -->
+        console.log(ul1.children[3]);
+    </script>
 
     <!-- 第一个子节点，和最后一个子节点 -->
-    <ol>
+    <!-- <ol>
         <li>我是li1</li>
         <li>我是li2</li>
         <li>我是li3</li>
@@ -67,6 +67,6 @@
 
         console.log(ol1.firstElementChild);
         console.log(ol1.lastElementChild);
-    </script>
+    </script> -->
 </body>
 </html>
