--- a/DemoCode/S/S1/2022122601常量.html
+++ b/DemoCode/S/S1/2022122601常量.html
@@ -7,5 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <script>
+        // 常量保持不变
+        const PI = 3.1415926;
+        PI = 10;
+        console.log(PI);    //报错
+    </script>
 </body>
 </html>
