周末需要备课

--- a/DemoCode/TEST/HW002随机点名，不出现重复/01.html
+++ b/DemoCode/TEST/HW002随机点名，不出现重复/01.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <h1>一等奖：赵云</h1>
+        <h2>二等奖：黄忠</h2>
+        <h3>三等奖：关羽</h3>
+        <button>点击抽奖</button>
+    </div>
     <script>
         let arr = ['赵云', '黄忠', '关羽', '张飞', '马超', '刘备', '曹操'];
         //  1.得到一个随机数，作为数组的索引号，随机数未    0~6
